--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Update README with Recent Activity
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs daily at midnight UTC
-  workflow_dispatch:      # Allows manual trigger
+    - cron: '0 0 * * *'
+  workflow_dispatch:
   push:
     branches: [ main ]
 
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        fetch-depth: 0  # Fetch all history
+        fetch-depth: 0
         token: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Setup Node.js
@@ -24,7 +24,7 @@ jobs:
     
     - name: Install dependencies
       run: |
-        npm init -y
+        echo '{"type": "module"}' > package.json
         npm install @octokit/rest
     
     - name: Update README
