--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,6 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add PROFILE_README.md
+        git add README.md
         git diff --staged --quiet || git commit -m "🚀 Auto-update README with latest activity"
         git push
